--- a/skillbox/mod4/src/main/resources/spring-frontend/index.html
+++ b/skillbox/mod4/src/main/resources/spring-frontend/index.html
@@ -9,7 +9,7 @@
 <html class="ie9" lang="ru">
 <![endif]-->
 <!--[if gt IE 9]><!-->
-<html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
+<html lang="ru"> <!--<![endif]-->
 <head>
     <title>Тут название страницы написать</title>
     <meta name="description" content="Описание страницы">
@@ -29,6 +29,18 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script defer src="/assets/js/scripts.min.js?v=64223515"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function (){
+            $("#locales").change(function (){
+                var selectedOption = $("#locales").val();
+                if(selectedOption != ''){
+                    window.location.replace('?lang='+selectedOption);
+                }
+            });
+        });
+    </script>
 </head>
 <body class="Site">
 <!--if lt IE 8
@@ -40,38 +52,35 @@ p.error-browser
         | браузера здесь&nbsp;
     | для правильного отображения сайта.
 -->
-<header th:replace="~{fragments/header_fragment :: headFragment}">
-</header>
+<header th:replace="~{fragments/header_fragment :: headFragment}"></header>
 <div class="Middle">
     <div class="wrap">
         <main class="Middle-main">
             <div class="Section">
-                <div class="Section-header">
-                    <h2 class="Section-title">Рекомендуемое
-                    </h2>
-                </div>
+                <h2 class="Section-title">Рекомендуемое
+                </h2>
                 <div class="Slider Slider_carousel">
                     <div class="Slider-box Cards">
-                        <div class="Slider-item" th:each="book : ${recommendedBooks}">
+                        <div class="Slider-item" th:each="book : ${bookData}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
                                         src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                                     <div class="Card-content">
-                                        <strong class="Card-title"><a href="#"
-                                                                      th:text="${book.title}">Техника</a>
+                                        <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.authorId}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
                                             Петрович
                                         </div>
-                                        <div class="Card-cost">
-                                            <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                        <div class="Card-cost"><span class="Card-priceOld"
+                                                                     th:text="${book.priceOld}">₽300.00</span><span
+                                                class="Card-price" th:text="${book.price}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="Slider-navigateWrap">
                         <div class="Slider-navigate">
                         </div>
@@ -520,8 +529,7 @@ p.error-browser
         </main>
     </div>
 </div>
-<footer th:replace="~{fragments/footer_fragment :: footFragment}">
-</footer>
+<footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
 <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
 <!--+menu(-->
 <!--    'Это раз',-->
