--- a/skillbox/mod4/src/main/resources/spring-frontend/index.html
+++ b/skillbox/mod4/src/main/resources/spring-frontend/index.html
@@ -61,14 +61,14 @@ p.error-browser
                 </h2>
                 <div class="Slider Slider_carousel">
                     <div class="Slider-box Cards">
-                        <div class="Slider-item" th:each="book : ${bookData}">
+                        <div class="Slider-item" th:each="book : ${recommendedBooks}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
                                         src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.authorId}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost"><span class="Card-priceOld"
