--- a/skillbox/mod5/src/main/resources/spring-frontend/books/popular.html
+++ b/skillbox/mod5/src/main/resources/spring-frontend/books/popular.html
@@ -70,7 +70,7 @@ p.error-browser
                     <h1 class="Section-title">Популярное
                     </h1>
                 </div>
-                <div class="Cards Cards_search Cards_refresh someUWU">
+                <div class="Cards Cards_search Cards_refresh">
                     <div class="Card" th:each="book:${booksData}">
                         <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
                                                                    alt="card.jpg" th:src="${book.image}"/></a>
@@ -85,10 +85,14 @@ p.error-browser
                                                          th:text="${book.priceOld}">₽300.00</span><span
                                     class="Card-price" th:text="${book.price}">₽190.00</span>
                             </div>
+                            <div>
+                                <p>Популярность: </p>
+                                <p th:text="${book.popularity}">100</p>
+                            </div>
                         </div>
                     </div>
                     <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#"
-                                                                     data-refreshshow="recent"
+                                                                     data-refreshshow="popular"
                                                                      data-refreshoffset="0"
                                                                      data-refreshlimit="5">Показать еще</a>
                     </div>
