--- a/skillbox/mod5/src/main/resources/spring-frontend/books/recent.html
+++ b/skillbox/mod5/src/main/resources/spring-frontend/books/recent.html
@@ -94,7 +94,7 @@ p.error-browser
                     <br/>
                     <br/>
                     <br/>
-                    <div class="Cards Cards_search Cards_refresh someUWU">
+                    <div class="Cards Cards_search Cards_refresh">
                         <div class="Card" th:each="book:${booksData}">
                             <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
                                                                        alt="card.jpg" th:src="${book.image}"/></a>
