--- a/skillbox/mod5/src/main/resources/spring-frontend/index.html
+++ b/skillbox/mod5/src/main/resources/spring-frontend/index.html
@@ -10,7 +10,7 @@
 <![endif]-->
 <!--[if gt IE 9]><!-->
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
- <!--<![endif]-->
+<!--<![endif]-->
 <head>
     <title>Тут название страницы написать</title>
     <meta name="description" content="Описание страницы">
@@ -33,11 +33,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function (){
-            $("#locales").change(function (){
+        $(document).ready(function () {
+            $("#locales").change(function () {
                 var selectedOption = $("#locales").val();
-                if(selectedOption != ''){
-                    window.location.replace('?lang='+selectedOption);
+                if (selectedOption != '') {
+                    window.location.replace('?lang=' + selectedOption);
                 }
             });
         });
@@ -167,103 +167,9 @@ p.error-browser
             <h2 class="Middle-title">Книги по тегам
             </h2>
             <div class="Tags" id="tags">
-                <div class="Tag Tag_xs"><a href="/tags/index.html">современная литература</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">классическая литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">зарубежная литература</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">фэнтези</a>
-                </div>
-                <div class="Tag Tag_lg"><a href="/tags/index.html">английская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">русская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">американская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">фантастика</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">детская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">детектив</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">любовь</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">мистика</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">юмор</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">приключения</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">сказка</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">французская литература</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">англия</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">художественная литература</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">психология</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">философия</a>
-                </div>
-                <div class="Tag Tag_lg"><a href="/tags/index.html">экранизировано</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">любимое</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">антиутопия</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">books you must read before you die</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">роман</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">франция</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">дайте две</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">young adult</a>
-                </div>
-                <div class="Tag Tag_lg"><a href="/tags/index.html">война</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">история</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">флэшмоб 2016</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">детство</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">жизнь</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">драма</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">россия</a>
-                </div>
-                <div class="Tag Tag_md"><a href="/tags/index.html">книжное путешествие</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">советская литература</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">триллер</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">америка</a>
-                </div>
-                <div class="Tag Tag_sm"><a href="/tags/index.html">немецкая литература</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">вампиры</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">школьная программа</a>
-                </div>
-                <div class="Tag Tag_xs"><a href="/tags/index.html">рассказы</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">магия</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">дети</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">русская классика</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">флэшмоб 2015</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">биография</a>
-                </div>
-                <div class="Tag"><a href="/tags/index.html">english</a>
+                <div class="Tag Tag_xs" th:each="tag: ${allTags}">
+                    <a th:href="@{/tags/__${tag.id}__/index}" th:text="${tag.name}"
+                       th:style="${'font-size: ' + (tag.book_count * 0.5) + 'px'}" ></a>
                 </div>
             </div>
         </main>
