--- a/skillbox/mod6/src/main/resources/spring-frontend/books/recent.html
+++ b/skillbox/mod6/src/main/resources/spring-frontend/books/recent.html
@@ -102,7 +102,7 @@ p.error-browser
                             <div class="Card-content">
                                 <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
                                 </strong>
-                                <div class="Card-description" th:text="${book.description}">Кондратенко Александр
+                                <div class="Card-description" th:text="${book.author}">Кондратенко Александр
                                     Петрович
                                 </div>
                                 <div class="Card-cost"><span class="Card-priceOld"
