--- a/skillbox/mod6/src/main/resources/spring-frontend/index.html
+++ b/skillbox/mod6/src/main/resources/spring-frontend/index.html
@@ -67,12 +67,12 @@ p.error-browser
                         <div class="Slider-item" th:each="book : ${recommendedBooks}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
-                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"  th:src="${book.image}"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.description}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost">
@@ -102,12 +102,12 @@ p.error-browser
                         <div class="Slider-item" th:each="book : ${recentBooks}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
-                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"  th:src="${book.image}"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.description}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost">
@@ -137,12 +137,12 @@ p.error-browser
                         <div class="Slider-item" th:each="book : ${popularBooks}">
                             <div class="Slider-content">
                                 <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
-                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"  th:src="${book.image}"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.description}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost">
