--- a/skillbox/mod7/src/main/resources/spring-frontend/index.html
+++ b/skillbox/mod7/src/main/resources/spring-frontend/index.html
@@ -66,18 +66,20 @@ p.error-browser
                     <div class="Slider-box Cards" data-load="recommended" data-loadoffset="8" data-loadlimit="20">
                         <div class="Slider-item" th:each="book : ${recommendedBooks}">
                             <div class="Slider-content">
-                                <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
-                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                                <div class="Card"><a class="Card-picture" href="/books/slug.html"
+                                                     th:href="@{'/books/' + ${book.slug}}">
+                                    <img src="/assets/img/content/main/card.jpg" alt="card.jpg" th:src="${book.image}"/></a>
                                     <div class="Card-content">
-                                        <strong class="Card-title"><a href="#"
+                                        <strong class="Card-title"><a href="#" th:href="@{'/books/' + ${book.slug}}"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.description}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost">
-                                            <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                            <span class="Card-priceOld" th:text="'₽' + ${book.price}">₽300.00</span>
+                                            <span class="Card-price"
+                                                  th:text="'₽' + ${book.discountPrice()}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
@@ -101,18 +103,20 @@ p.error-browser
                     <div class="Slider-box Cards" data-load="recent" data-loadoffset="8" data-loadlimit="20">
                         <div class="Slider-item" th:each="book : ${recentBooks}">
                             <div class="Slider-content">
-                                <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
-                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                                <div class="Card"><a class="Card-picture" href="/books/slug.html">
+                                    <img src="/assets/img/content/main/card.jpg" alt="card.jpg"
+                                         th:src="${book.image}"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.description}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost">
-                                            <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                            <span class="Card-priceOld" th:text="'₽' + ${book.price}">₽300.00</span>
+                                            <span class="Card-price"
+                                                  th:text="'₽' + ${book.discountPrice()}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
@@ -136,18 +140,20 @@ p.error-browser
                     <div class="Slider-box Cards" data-load="popular" data-loadoffset="8" data-loadlimit="20">
                         <div class="Slider-item" th:each="book : ${popularBooks}">
                             <div class="Slider-content">
-                                <div class="Card"><a class="Card-picture" href="/books/slug.html"><img
-                                        src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                                <div class="Card"><a class="Card-picture" href="/books/slug.html">
+                                    <img src="/assets/img/content/main/card.jpg" alt="card.jpg"
+                                         th:src="${book.image}"/></a>
                                     <div class="Card-content">
                                         <strong class="Card-title"><a href="#"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.description}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost">
-                                            <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                            <span class="Card-priceOld" th:text="'₽' + ${book.price}">₽300.00</span>
+                                            <span class="Card-price"
+                                                  th:text="'₽' + ${book.discountPrice()}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
@@ -169,7 +175,7 @@ p.error-browser
             <div class="Tags" id="tags">
                 <div class="Tag Tag_xs" th:each="tag: ${allTags}">
                     <a th:href="@{/tags/__${tag.id}__/index}" th:text="${tag.name}"
-                       th:style="${'font-size: ' + (tag.book_count * 0.5) + 'px'}" ></a>
+                       th:style="${'font-size: ' + (tag.book_count * 0.5) + 'px'}"></a>
                 </div>
             </div>
         </main>
