--- a/skillbox/mod7/src/main/resources/spring-frontend/search/index.html
+++ b/skillbox/mod7/src/main/resources/spring-frontend/search/index.html
@@ -83,10 +83,10 @@ p.error-browser
                         <div class="Card-content">
                             <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
                             </strong>
-                            <div class="Card-description" th:text="${book.description}">Кондратенко Александр Петрович
+                            <div class="Card-description" th:text="${book.author}">Кондратенко Александр Петрович
                             </div>
-                            <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span
-                                    class="Card-price" th:text="${book.price}">₽190.00</span>
+                            <div class="Card-cost"><span class="Card-priceOld" th:text="'₽' + ${book.price}">₽300.00</span><span
+                                    class="Card-price" th:text="'₽' + ${book.discountPrice()}">₽190.00</span>
                             </div>
                         </div>
                     </div>
